--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Olá, seja muito bem-vindo (a) ao meu portfólio de projetos de Ciência de Dados.</h1>
+											<h2>Olá, seja muito bem-vindo ao meu portfólio de projetos de Ciência de Dados.</h2>
 										</header>
 										<p>Nessa página, eu demonstro minhas habilidades de resolver problemas de negócio
 utilizando conceitos e ferramentas da Ciência de Dados, através de projetos com dados
@@ -47,18 +47,18 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 
 									</div>
 									<span class="image object">
-										<img src="images/markus-spiske-hvSr_CVecVI-unsplash.jpg" alt="" />
+										<img src="images/Jonas_Foto_Perfil.jpeg" alt="" />
 									</span>
 								</section>
 
 								<!-- Sobre mim -->
 									<section>
 										<header class="main">
-											<h1>Sobre mim</h1>
+											<h2>Sobre mim</h2>
 										</header>
 
 										<!-- Content -->
-											<h2 id="content">Meu nome é Jonas Barletta</h2>
+											<h3 id="content">Meu nome é Jonas Barletta</h3>
 											<p>Sou formado em Matemática e possuo mestrado na área, ambos UNICAMP.</p>
 											<p>Atualmente, lecino em escolas particulares de Campinas-SP e região a nível de Ensino Fundamental II e Médio.</p>
 											<p>Estou buscando oportunidade de mudança para área de Ciência de Dados.</p>
@@ -75,10 +75,9 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 												<h3>Linguagens de Programação e Banco de Dados</h3>
 												<ul>
 													<li>Python com focos em análise de dados.</li>
-													<!---<li>Web scraping com Python.</li>
+													<li>Web scraping com Python.</li>
 													<li>SQL para extração de dados.</li>
-													<li>R para modelagem e estatística.</li>
-													<li>Banco de Dados SQLite, Postres, MySQL, Oracle, MongoDB e Cassandra.</li>--->
+													<li>Banco de Dados SQLite</li>
 												</ul>
 										</article>
 										<article>
@@ -118,18 +117,18 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 								<!-- Experiência -->
 									<section>
 										<header class="main">
-											<h1>Experiências Profissionais</h1>
+											<h2>Experiências Profissionais</h2>
 										</header>
 
 
-										<h2 id="content">4+ Projetos completos de Ciência de Dados</h2>
+										<h3 id="content">4+ Projetos completos de Ciência de Dados</h3>
 										<p>Construção de soluções de dados para problemas de negócio, próximos dos desafios
 reais das empresas, utilizando dados públicos de competições de Ciência de Dados,
-onde eu abordei o problema desde a concepção do desafio de negócio até a
+onde abordei o problema desde a concepção do desafio de negócio até a
 publicação do algoritmo treinado em produção, utilizando ferramentas de Cloud
 Computing.</p>
 
-										<h2 id="content">6+ anos como Professor de Matemática</h2>
+										<h3 id="content">6+ anos como Professor de Matemática</h3>
 										<p>Lecionei Matemática em diversas escolas e cursinhos em
 										Campinas, Itatiba e Bragança Paulista.</p>
 
@@ -141,30 +140,14 @@ Computing.</p>
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/markus-spiske-FXFz-sW0uwo-unsplash.jpg" alt="" /></a>
-											<h3>Construção de um programa de fidelidade com clusterização de clientes.</h3>
-											<p>Eu usei Python, Estatística e técnicas não-supervisionadas de Machine Learning para segmentar um grupo de clientes com base em suas características de performance
-de compra, a fim de selecionar grupos de clientes para formar um programa de Fidelidade com o objetivo de aumentar a receita da empresa. E o resultado dessa solução, caso fosse implementada,
-seria de R$ 15MM de dólares de receita anual.</p>
-
-											<h4>As ferramentas utilizadas foram:</h4>
-											<ul>
-												<li>Git, Gitlab e Github.</li>
-												<li>Python, Pandas, Matplotlib e Seaborn.</li>
-												<li>Jupyter Notebook.</li>
-												<li>K-Means, Hierarquical Clustering, DBScan.</li>
-												<li>AWS Cloud (EC2, S3, Postgres, SQLite).</li>
-												<li>Metabase Visualization.</li>
-											</ul>
-
-											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
-											</ul>
-										</article>
-										<article>
 											<a href="#" class="image"><img src="images/houses.jpg" alt="" /></a>
 											<h3>Identificação de imóveis para compra e revenda a fim de maximizar o lucro</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p>O Projeto House Rocket é um projeto do tipo Insights fictício que
+												 busca analisar as melhores oportunidades de compras de imóveis para
+												 a empresa House Rocket (também fictícia).
+											   Utilizando Python e Estatística estudei os dados afim de criar algumas
+											   hipóteses de negócios e recomendar os 882 melhores imóveis para compra.
+											   Com uma margem de lucro de 30% estima-se um lucro de U$108 milhões.</p>
 
 											<h4>As ferramentas utilizadas foram:</h4>
 											<ul>
@@ -176,9 +159,29 @@ seria de R$ 15MM de dólares de receita anual.</p>
 											</ul>
 
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/jonasbarletta/Insight_Project_House_Rocket" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
+										<article>
+												<a href="#" class="image"><img src="images/waldemar-brandt-UP9DtTjRYpI-unsplash.jpg" alt="" /></a>
+												<h3>Catalogar opções de calça jeans masculinas via web scraping</h3>
+												<p>Com o objetivo de catalogar as opções de calça jeans do mercado utilizei o pacote Beautiful Soup
+												do Python para fazer um web scraping do site da H&M. Com a ferramenta de orquestração de tarefas Cron
+												e o Banco de Dados SQLite, coletamos os dados automaticamente por uma semana. Após esse período analisamos
+												os dados afim de entender opções de calça jeans masculinas.
+											    </p>
+
+												<h4>As ferramentas utilizadas foram:</h4>
+												<ul>
+													<li>Python, Pandas e Beautiful Soup</li>
+													<li>Jupyter Notebook, Pycharm</li>
+													<li>Cron</li>
+												</ul>
+
+												<ul class="actions">
+													<li><a href="#" class="button">Saiba Mais</a></li>
+												</ul>
+									  </article>
 									</section>
 
 												<!-- Section -->
