--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 
 									</div>
 									<span class="image object">
-										<img src="images/Jonas_Foto_Perfil.jpeg" alt="" />
+										<img src="images/Jonas_Foto_Perfil.jpeg" width="200" height="300"/>
 									</span>
 								</section>
 
@@ -60,7 +60,7 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 										<!-- Content -->
 											<h3 id="content">Meu nome é Jonas Barletta</h3>
 											<p>Sou formado em Matemática e possuo mestrado na área, ambos UNICAMP.</p>
-											<p>Atualmente, lecino em escolas particulares de Campinas-SP e região a nível de Ensino Fundamental II e Médio.</p>
+											<p>Atualmente, leciono em escolas particulares de Campinas-SP e região a nível de Ensino Fundamental II e Médio.</p>
 											<p>Estou buscando oportunidade de mudança para área de Ciência de Dados.</p>
 										</section>
 							<!-- Section -->
