--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h2>Olá, seja muito bem-vindo ao meu portfólio de projetos de Ciência de Dados.</h2>
+											<h1>Olá, seja muito bem-vindo ao meu portfólio de projetos de Ciência de Dados.</h2>
 										</header>
 										<p>Nessa página, eu demonstro minhas habilidades de resolver problemas de negócio
 utilizando conceitos e ferramentas da Ciência de Dados, através de projetos com dados
@@ -47,7 +47,7 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 
 									</div>
 									<span class="image object">
-										<img src="images/Jonas_Foto_Perfil.jpeg" width="200" height="300"/>
+										<img src="images/Jonas_Foto_Perfil.jpeg" alt=""/>
 									</span>
 								</section>
 
