--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 
 									</div>
 									<span class="image object">
-										<img src="images/Jonas_Foto_Perfil.jpeg" alt=""/>
+										<img src="images/Jonas_Foto_Perfil.jpeg" alt="" max-width:200px; max-height:150px; width: auto; height: auto/>
 									</span>
 								</section>
 
