--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 										Sinta-se à vontade para entrar em contato através dos links no final da página.</p>
 
 									</div>
-									<span class="image object">
-										<img src="images/Jonas_Foto_Perfil.jpeg" alt="" max-width:200px; max-height:150px; width: auto; height: auto/>
-									</span>
+
+										<img src="images/Jonas_Foto_Perfil.jpeg" width="30%" height="30%"/>
+
 								</section>
 
 								<!-- Sobre mim -->
