--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 
 										<!-- Content -->
 											<h3 id="content">Meu nome é Jonas Barletta</h3>
-											<p>Sou formado em Matemática e possuo mestrado na área, ambos UNICAMP.</p>
-											<p>Atualmente, leciono em escolas particulares de Campinas-SP e região a nível de Ensino Fundamental II e Médio.</p>
-											<p>Estou buscando oportunidade de mudança para área de Ciência de Dados.</p>
+											<p>Sou formado em Matemática e possuo mestrado na área, ambos pela UNICAMP. </p>
+											<p>Atualmente atuo como professor de matemática em escolas particulares nos anos finais do Ensino Fundamental II e Médio,
+											mas estou em processo de mudança de carreira para a área de Ciência de Dados. Para isso estudo análise de dados utilizando
+										  linguagem Python, SQL, Machine Learning, Estatística, com foco na solução de problemas de negócio.</p>
+											<p></p>
 										</section>
 							<!-- Section -->
 								<section>
@@ -85,11 +87,11 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 											<div class="content">
 												<h3>Estatística e Machine Learning</h3>
 												<ul>
-													<!---<li>Estatística descritiva (localização, dispersão, assimetria, kurtosis, densidade).</li>
+													<li>Estatística descritiva (localização, dispersão, assimetria, kurtosis, densidade).</li>
 													<li>Algoritmos de Regressão, classificação, clusterização e "learn to rank".</li>
-													<li>Técnicas de balanceamento dos dados, seleção de atributos e redução dedimensionalidade.</li>
-													<li>Métricas de performance dos algoritmos ( RMSE, MAE, MAPE, Confusion Matrix,Precisão, Recall, Curva ROC, Curva Lift, AUC, Silhouette Score, DB-Index ).</li>
-													<li>Pacotes de Machine Learning: Sklearn e Scipy.</li>--->
+													<li>Técnicas de balanceamento dos dados, seleção de atributos e redução de dimensionalidade.</li>
+													<li>Métricas de performance dos algoritmos ( RMSE, MAE, MAPE )<!---, Confusion Matrix, Precisão, Recall, Curva ROC, Curva Lift, AUC, Silhouette Score, DB-Index ).---></li>
+													<li>Pacotes de Machine Learning: Sklearn. <!---e Scipy---></li>
 												</ul>
 											</div>
 										</article>
@@ -97,8 +99,8 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
 												<h3>Visualização de Dados</h3>
-												<!---<li>Matplotlib, Seaborn, Plotly e Bokeh.</li>
-												<li>Power BI, Tableau, Metabase e Looker.</li>--->
+												<li>Matplotlib, Seaborn e Plotly.</li>
+												<!---<li>Power BI, Tableau, Metabase e Looker.</li>--->
 											</div>
 										</article>
 										<article>
@@ -106,9 +108,9 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 											<div class="content">
 												<h3>Engenharia de Software</h3>
 												<ul>
-										 <!---<li>Git, Github, Gitlab, Cookiecutter, Virtual Environment e Docker</li>
-													<li>Streamlit, Flask, Python API's.</li>
-													<li>Cloud Heroku, AWS Amazon, Google Cloud Platform ( GCP ) e Azure.</li>--->
+										 		<li>Git, Github, Virtual Environment <!---, Gitlab, Cookiecutter,  e Docker---></li>
+												<li>Streamlit, Flask, Python API's.</li>
+												<li>Cloud Heroku <!---, AWS Amazon, Google Cloud Platform ( GCP ) e Azure.---></li>
 												</ul>
 											</div>
 										</article>
@@ -121,7 +123,7 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 										</header>
 
 
-										<h3 id="content">4+ Projetos completos de Ciência de Dados</h3>
+										<h3 id="content">2+ Projetos completos de Ciência de Dados</h3>
 										<p>Construção de soluções de dados para problemas de negócio, próximos dos desafios
 reais das empresas, utilizando dados públicos de competições de Ciência de Dados,
 onde abordei o problema desde a concepção do desafio de negócio até a
@@ -130,7 +132,10 @@ Computing.</p>
 
 										<h3 id="content">6+ anos como Professor de Matemática</h3>
 										<p>Lecionei Matemática em diversas escolas e cursinhos em
-										Campinas, Itatiba e Bragança Paulista.</p>
+										Campinas, Itatiba e Bragança Paulista. Também coordenei equipes olímpicas de matemática na maioria
+										das escolas que trabalhei. Nesse período desenvolvi
+									  habilidades de lidar com pessoas, falar em público, didática, planejamento, pensamento analítico e
+									  escrita acadêmica.</p>
 
 								</section>
 							<!-- Section -->
@@ -141,7 +146,7 @@ Computing.</p>
 									<div class="posts">
 										<article>
 											<a href="#" class="image"><img src="images/houses.jpg" alt="" /></a>
-											<h3>Identificação de imóveis para compra e revenda a fim de maximizar o lucro</h3>
+											<h3>Identificação de imóveis revenda para maximizar o lucro</h3>
 											<p>O Projeto House Rocket é um projeto do tipo Insights fictício que
 												 busca analisar as melhores oportunidades de compras de imóveis para
 												 a empresa House Rocket (também fictícia).
@@ -162,10 +167,10 @@ Computing.</p>
 												<li><a href="https://github.com/jonasbarletta/Insight_Project_House_Rocket" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
-										<article>
+										<!---<article>
 												<a href="#" class="image"><img src="images/waldemar-brandt-UP9DtTjRYpI-unsplash.jpg" alt="" /></a>
 												<h3>Catalogar opções de calça jeans masculinas via web scraping</h3>
-												<p>Com o objetivo de catalogar as opções de calça jeans do mercado utilizei o pacote Beautiful Soup
+												<p>Com o objetivo de coletar as opções de calça jeans do mercado utilizei o pacote Beautiful Soup
 												do Python para fazer um web scraping do site da H&M. Com a ferramenta de orquestração de tarefas Cron
 												e o Banco de Dados SQLite, coletamos os dados automaticamente por uma semana. Após esse período analisamos
 												os dados afim de entender opções de calça jeans masculinas.
@@ -181,7 +186,30 @@ Computing.</p>
 												<ul class="actions">
 													<li><a href="#" class="button">Saiba Mais</a></li>
 												</ul>
-									  </article>
+									  </article>--->
+										<article>
+												<a href="#" class="image"><img src="images/rossmann-image.jpg" alt="" /></a>
+												<h3>Previsão de vendas das Lojas Rossmann</h3>
+												<p>O Projeto das Lojas Rossmann é um projeto de Ciências de Dados para a predição de vendas da gigante farmaceutica européia Rossmann.
+													O objetivo do projeto é prever as vendas de cada loja Rossmann nas próximas seis semanas. Utilizando o modelo de regressão XGBoost, fizemos a
+													previsão com erro de aproximadamente 10%. O modelo está publicado em produção e pode ser acessado em qualquer horário por um Bot do
+													Telegram.
+													</p>
+
+												<h4>As ferramentas utilizadas foram:</h4>
+												<ul>
+													<li>Git e Github.</li>
+													<li>Python, Pandas, Matplotlib, Seaborn.</li>
+													<li>Jupyter Notebook.</li>
+													<li>Regressões:Linear, Lasso, Random Forest e XGBoost.</li>
+													<li>BOT no Telegram.</li>
+													<li>Cloud Heroku.</li>
+												</ul>
+
+												<ul class="actions">
+													<li><a href="https://github.com/jonasbarletta/ds_em_producao" class="button">Saiba Mais</a></li>
+												</ul>
+										</article>
 									</section>
 
 												<!-- Section -->
