--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 													<li>Estatística descritiva (localização, dispersão, assimetria, kurtosis, densidade).</li>
 													<li>Algoritmos de Regressão, classificação, clusterização e "learn to rank".</li>
 													<li>Técnicas de balanceamento dos dados, seleção de atributos e redução de dimensionalidade.</li>
-													<li>Métricas de performance dos algoritmos ( RMSE, MAE, MAPE )<!---, Confusion Matrix, Precisão, Recall, Curva ROC, Curva Lift, AUC, Silhouette Score, DB-Index ).---></li>
-													<li>Pacotes de Machine Learning: Sklearn. <!---e Scipy---></li>
+													<li>Métricas de performance dos algoritmos (RMSE, MAE, MAPE, Precisão, Recall, Curva ROC, Curva Lift)<!---, Confusion Matrix, AUC, Silhouette Score, DB-Index ).---></li>
+													<li>Pacotes de Machine Learning: Sklearn e Scipy.</li>
 												</ul>
 											</div>
 										</article>
@@ -203,11 +203,35 @@ Computing.</p>
 													<li>Jupyter Notebook.</li>
 													<li>Regressões:Linear, Lasso, Random Forest e XGBoost.</li>
 													<li>BOT no Telegram.</li>
-													<li>Cloud Heroku.</li>
+													<li>Heroku Cloud.</li>
 												</ul>
 
 												<ul class="actions">
 													<li><a href="https://github.com/jonasbarletta/ds_em_producao" class="button">Saiba Mais</a></li>
+												</ul>
+										</article>
+
+										<article>
+												<a href="#" class="image"><img src="images/vlad-deep-mCqi3MljC4E-unsplash.jpg" alt="" /></a>
+												<h3>Classificação de Clientes da Seguradora Insurance All.</h3>
+												<p> A empresa (fictícia) Insurance All oferecerá aos seus clientes de seguro de vida um seguro de automóvel no modelo de venda cruzada.
+													Com a base de dados da empresa construímos um modelo de ML para classificação (com learning to rank) dos clientes mais propensos a
+													contratar o novo seguro. Como resultado geramos uma lista ordenada com os melhores clientes no topo, tal ordenação garantiu acessar
+													47% dos interessados contatando apenas 15% da base. Ou ainda, acessar 81% dos interessados contatando 32% da base.
+
+													</p>
+
+												<h4>As ferramentas utilizadas foram:</h4>
+												<ul>
+													<li>Git e Github.</li>
+													<li>SQLite.</li>
+													<li>Python, Pandas, Matplotlib, Seaborn.</li>
+													<li>Jupyter Notebook.</li>
+													<li>Classificação:KNN, Regressão Logística, Extra Tree, Random Forest e LGBM.</li>
+												</ul>
+
+												<ul class="actions">
+													<li><a href="https://github.com/jonasbarletta/health_insurance_cross_sell" class="button">Saiba Mais</a></li>
 												</ul>
 										</article>
 									</section>
