--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@ Computing.</p>
 									<div class="posts">
 										<article>
 											<a href="#" class="image"><img src="images/houses.jpg" alt="" /></a>
-											<h3>Identificação de imóveis revenda para maximizar o lucro</h3>
+											<h3>Identificação de imóveis para a empresa House Rocket</h3>
 											<p>O Projeto House Rocket é um projeto do tipo Insights fictício que
-												 busca analisar as melhores oportunidades de compras de imóveis para
+												 busca analisar as melhores oportunidades de compras de imóveis para revenda para
 												 a empresa House Rocket (também fictícia).
 											   Utilizando Python e Estatística estudei os dados afim de criar algumas
 											   hipóteses de negócios e recomendar os 882 melhores imóveis para compra.
