--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 													<li>Python com focos em análise de dados.</li>
 													<li>Web scraping com Python.</li>
 													<li>SQL para extração de dados.</li>
-													<li>Banco de Dados SQLite</li>
+													<li>Banco de Dados: SQLite, Postgres</li>
 												</ul>
 										</article>
 										<article>
@@ -88,9 +88,9 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 												<h3>Estatística e Machine Learning</h3>
 												<ul>
 													<li>Estatística descritiva (localização, dispersão, assimetria, kurtosis, densidade).</li>
-													<li>Algoritmos de Regressão, classificação, clusterização e "learn to rank".</li>
+													<li>Algoritmos de Regressão, classificação, clusterização.</li>
 													<li>Técnicas de balanceamento dos dados, seleção de atributos e redução de dimensionalidade.</li>
-													<li>Métricas de performance dos algoritmos (RMSE, MAE, MAPE, Precisão, Recall, Curva ROC, Curva Lift)<!---, Confusion Matrix, AUC, Silhouette Score, DB-Index ).---></li>
+													<li>Métricas de performance dos algoritmos (RMSE, MAE, MAPE, Precisão, Recall, Curva ROC, Curva Lift, Silhouette Score)<!---, Confusion Matrix, AUC, DB-Index ).---></li>
 													<li>Pacotes de Machine Learning: Sklearn e Scipy.</li>
 												</ul>
 											</div>
@@ -100,6 +100,7 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 											<div class="content">
 												<h3>Visualização de Dados</h3>
 												<li>Matplotlib, Seaborn e Plotly.</li>
+												<li>Looker Studio.</li>
 												<!---<li>Power BI, Tableau, Metabase e Looker.</li>--->
 											</div>
 										</article>
@@ -110,7 +111,7 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 												<ul>
 										 		<li>Git, Github, Virtual Environment <!---, Gitlab, Cookiecutter,  e Docker---></li>
 												<li>Streamlit, Flask, Python API's.</li>
-												<li>Cloud Heroku <!---, AWS Amazon, Google Cloud Platform ( GCP ) e Azure.---></li>
+												<li>Cloud Heroku, AWS Amazon <!--- Google Cloud Platform ( GCP ) e Azure.---></li>
 												</ul>
 											</div>
 										</article>
@@ -123,7 +124,7 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 										</header>
 
 
-										<h3 id="content">2+ Projetos completos de Ciência de Dados</h3>
+										<h3 id="content">4+ Projetos completos de Ciência de Dados</h3>
 										<p>Construção de soluções de dados para problemas de negócio, próximos dos desafios
 reais das empresas, utilizando dados públicos de competições de Ciência de Dados,
 onde abordei o problema desde a concepção do desafio de negócio até a
@@ -234,6 +235,38 @@ Computing.</p>
 													<li><a href="https://github.com/jonasbarletta/health_insurance_cross_sell" class="button">Saiba Mais</a></li>
 												</ul>
 										</article>
+
+										<article>
+											<a href="#" class="image"><img src="images/insiders_clustering_3.jpg" alt="" /></a>
+											<h3>Identificação de Clientes de Alto Valor</h3>
+											<p>	Este é um projeto de Ciências de Dados que utliza técnicas
+												de agrupamento (clusterização) de clientes de um E-Commerce. O objetivo
+											do projeto é identificar um grupo de clientes que seja mais importantes
+										 para a empresa para que seja fornecido um programa de fidelidade. Foram utilizados
+									   modelos de aprendizagem não supervisionado para dividir os clientes
+									   em 10 grupos, sendo de um deles claramente se destacou em relação aos outros e
+									   o nomeamos com Grupo Insiders. O modelo foi colocado em produção via AWS, utilizando
+									   ferramentas como S3, EC2 e RDS (Postgres). Também foi gerado um Dashboard com os principais
+									  insights desse grupo de clientes.</p>
+
+											<h4>As ferramentas utilizadas foram:</h4>
+											<ul>
+												<li>Python, Pandas, Numpy, Seaborn.</li>
+												<li>Jupyter Notebook.</li>
+												<li>Agrupamento (Clusterização): K-Means, GMM, Clusterização Hierárquica, DBSCAN</li>
+												<li>Redução de dimensionalidade: PCS, t-SNE, UMAP</li>
+												<li>Embedding de árvore</li>
+												<li>AWS Amazon: S3, EC2, RDS.</li>
+												<li>Banco de Dados: SQLite, Postgres.</li>
+												<li>Cronjob e Papermill.</li>
+												<li>Looker Studio</li>
+											</ul>
+
+											<ul class="actions">
+												<li><a href="https://github.com/jonasbarletta/insiders_clustering" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
+
 									</section>
 
 												<!-- Section -->
