--- a/index.html
+++ b/index.html
@@ -59,10 +59,15 @@ ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 
 										<!-- Content -->
 											<h3 id="content">Meu nome é Jonas Barletta</h3>
-											<p>Sou formado em Matemática e possuo mestrado na área, ambos pela UNICAMP. </p>
-											<p>Atualmente atuo como professor de matemática em escolas particulares nos anos finais do Ensino Fundamental II e Médio,
-											mas estou em processo de mudança de carreira para a área de Ciência de Dados. Para isso estudo análise de dados utilizando
-										  linguagem Python, SQL, Machine Learning, Estatística, com foco na solução de problemas de negócio.</p>
+											<p>Atualmente atuo como Analista de Inteligência de Dados SR na Vitrio focado em Engenharia de Dados, criando ETL para extração dos dados.
+										        Além disso, realizo projetos de portfólio utilizando linguagem python, SQL, machine learning, estatística, análise de dados e a metodologia CRISP-DS com 
+											foco na solução de problemas de negócio. Os projetos que realizei serão apresentados nesse portfólio. 
+
+											<p>Sou graduado e mestre em matemática pela UNICAMP. Lecionei matemática por 7 anos em escolas particulares de Campinas e região.
+											Além das aulas curriculares, coordenei equipes olímpicas de matemática na maioria das escolas que passei.
+											Com essa experiência fui capaz de desenvolver diversas habilidades, como lidar com pessoas, falar em público, didática, 
+											planejamento, pensamento analítico e escrita acadêmica. Além disso, sou um profissional focado, estudioso,
+											tenho facilidade de adaptação e possuo desejo e vontade de aprender. </p>
 											<p></p>
 										</section>
 							<!-- Section -->
