--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
 											<h1>Olá, seja muito bem-vindo ao meu portfólio de projetos de Ciência de Dados.</h2>
 										</header>
 										<p>Nessa página, eu demonstro minhas habilidades de resolver problemas de negócio
-utilizando conceitos e ferramentas da Ciência de Dados, através de projetos com dados
-públicos.<br />
-										Você vai encontrar também, minhas experiências profissionais, habilidades,
-ferramentas e conceitos envolvendo a Ciência de Dados.<br />
+										utilizando conceitos e ferramentas da Ciência de Dados, através de projetos com dados públicos.<br />
+										Você vai encontrar também, minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados.<br />
 										Sinta-se à vontade para entrar em contato através dos links no final da página.</p>
 
 									</div>
