--- a/index.html
+++ b/index.html
@@ -126,13 +126,20 @@
 											<h2>Experiências Profissionais</h2>
 										</header>
 
+										<h3 id="content">Analista de Inteligêncida de Dados SR</h3>
+										<p> Minhas principais funções são:
+										<li> Utilizar Python para ETL de dados: API para Google BigQuery. Algumas API's que trabalhei: Salesforce, RDStation, Tiktok, Gupy.</li>
+										<li> Analisar e Modelar de Dados no Looker.</li>
+										<li> Automatizar a exxecução dos códigos com Jenkins.</li>
+										<li> Versionar os códigos no BitBucke.</li></p>
+
 
 										<h3 id="content">4+ Projetos completos de Ciência de Dados</h3>
 										<p>Construção de soluções de dados para problemas de negócio, próximos dos desafios
-reais das empresas, utilizando dados públicos de competições de Ciência de Dados,
-onde abordei o problema desde a concepção do desafio de negócio até a
-publicação do algoritmo treinado em produção, utilizando ferramentas de Cloud
-Computing.</p>
+										reais das empresas, utilizando dados públicos de competições de Ciência de Dados,
+										onde abordei o problema desde a concepção do desafio de negócio até a
+										publicação do algoritmo treinado em produção, utilizando ferramentas de Cloud
+										Computing.</p>
 
 										<h3 id="content">6+ anos como Professor de Matemática</h3>
 										<p>Lecionei Matemática em diversas escolas e cursinhos em
