--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 										<!-- Content -->
 											<h3 id="content">Meu nome é Jonas Barletta</h3>
 											<p>Atualmente atuo como Analista de Inteligência de Dados SR na Vitrio focado em Engenharia de Dados, criando ETL para extração dos dados.
-										        Além disso, realizo projetos de portfólio utilizando linguagem python, SQL, machine learning, estatística, análise de dados e a metodologia CRISP-DS com 
-											foco na solução de problemas de negócio. Os projetos que realizei serão apresentados nesse portfólio. 
+										        Além disso, realizo projetos de portfólio utilizando linguagem python, SQL, machine learning, estatística, análise de dados e a metodologia CRISP-DS com
+											foco na solução de problemas de negócio. Os projetos que realizei serão apresentados nesse portfólio.
 
 											<p>Sou graduado e mestre em matemática pela UNICAMP. Lecionei matemática por 7 anos em escolas particulares de Campinas e região.
 											Além das aulas curriculares, coordenei equipes olímpicas de matemática na maioria das escolas que passei.
-											Com essa experiência fui capaz de desenvolver diversas habilidades, como lidar com pessoas, falar em público, didática, 
+											Com essa experiência fui capaz de desenvolver diversas habilidades, como lidar com pessoas, falar em público, didática,
 											planejamento, pensamento analítico e escrita acadêmica. Além disso, sou um profissional focado, estudioso,
 											tenho facilidade de adaptação e possuo desejo e vontade de aprender. </p>
 											<p></p>
@@ -104,7 +104,8 @@
 												<h3>Visualização de Dados</h3>
 												<li>Matplotlib, Seaborn e Plotly.</li>
 												<li>Looker Studio.</li>
-												<!---<li>Power BI, Tableau, Metabase e Looker.</li>--->
+												<li>Looker</li>
+												<!---<li>Power BI, Tableau, Metabase.</li>--->
 											</div>
 										</article>
 										<article>
@@ -114,7 +115,7 @@
 												<ul>
 										 		<li>Git, Github, Virtual Environment <!---, Gitlab, Cookiecutter,  e Docker---></li>
 												<li>Streamlit, Flask, Python API's.</li>
-												<li>Cloud Heroku, AWS Amazon <!--- Google Cloud Platform ( GCP ) e Azure.---></li>
+												<li>Cloud Heroku, AWS Amazon, Google Cloud Platform ( GCP ) <!---  e Azure.---></li>
 												</ul>
 											</div>
 										</article>
@@ -131,7 +132,7 @@
 										<li> Utilizar Python para ETL de dados: API para Google BigQuery. Algumas API's que trabalhei: Salesforce, RDStation, Tiktok, Gupy.</li>
 										<li> Analisar e Modelar de Dados no Looker.</li>
 										<li> Automatizar a exxecução dos códigos com Jenkins.</li>
-										<li> Versionar os códigos no BitBucke.</li></p>
+										<li> Versionar os códigos no BitBucket.</li></p>
 
 
 										<h3 id="content">4+ Projetos completos de Ciência de Dados</h3>
@@ -156,7 +157,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/houses.jpg" alt="" /></a>
+											<a class="image"><img src="images/houses.jpg" alt="" /></a>
 											<h3>Identificação de imóveis para a empresa House Rocket</h3>
 											<p>O Projeto House Rocket é um projeto do tipo Insights fictício que
 												 busca analisar as melhores oportunidades de compras de imóveis para revenda para
@@ -199,7 +200,7 @@
 												</ul>
 									  </article>--->
 										<article>
-												<a href="#" class="image"><img src="images/rossmann-image.jpg" alt="" /></a>
+												<a class="image"><img src="images/rossmann-image.jpg" alt="" /></a>
 												<h3>Previsão de vendas das Lojas Rossmann</h3>
 												<p>O Projeto das Lojas Rossmann é um projeto de Ciências de Dados para a predição de vendas da gigante farmaceutica européia Rossmann.
 													O objetivo do projeto é prever as vendas de cada loja Rossmann nas próximas seis semanas. Utilizando o modelo de regressão XGBoost, fizemos a
@@ -223,7 +224,7 @@
 										</article>
 
 										<article>
-												<a href="#" class="image"><img src="images/vlad-deep-mCqi3MljC4E-unsplash.jpg" alt="" /></a>
+												<a class="image"><img src="images/vlad-deep-mCqi3MljC4E-unsplash.jpg" alt="" /></a>
 												<h3>Classificação de Clientes da Seguradora Insurance All.</h3>
 												<p> A empresa (fictícia) Insurance All oferecerá aos seus clientes de seguro de vida um seguro de automóvel no modelo de venda cruzada.
 													Com a base de dados da empresa construímos um modelo de ML para classificação (com learning to rank) dos clientes mais propensos a
@@ -247,7 +248,7 @@
 										</article>
 
 										<article>
-											<a href="#" class="image"><img src="images/insiders_clustering_3.jpg" alt="" /></a>
+											<a class="image"><img src="images/insiders_clustering_3.jpg" alt="" /></a>
 											<h3>Identificação de Clientes de Alto Valor</h3>
 											<p>	Este é um projeto de Ciências de Dados que utliza técnicas
 												de agrupamento (clusterização) de clientes de um E-Commerce. O objetivo
@@ -274,6 +275,27 @@
 
 											<ul class="actions">
 												<li><a href="https://github.com/jonasbarletta/insiders_clustering" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
+
+										<article>
+											<a class="image"><img src="images/hotel_cancelation.jpg" alt="" /></a>
+											<h3>Hackdays - Hotel Chain Cancellation Rating</h3>
+											<p>Este projeto foi resultado da 4ª edição do Hackdays da
+												 Comunidade DS onde liderei a equipe, Only Outliers, campeã da competição.
+											A competição que tinha como objetivo desenvolver um modelo de classificação
+											 para prever o cancelamento de reservas em uma rede hoteleira e gerar insights de negócio para o time de marketing.
+										  Atingimos um f1-score de 0.97291 no ranking privado e fomos a equipe melhor avaliada nos quesitos: organização do código, insights acionáveis e storytelling.</p>
+
+											<h4>As ferramentas utilizadas foram:</h4>
+											<ul>
+												<li>Python, Pandas, Numpy, Seaborn.</li>
+												<li>Jupyter Notebook.</li>
+												<li>Pipeline.</li>
+												<li>XGBoost.</li>
+											</ul>
+												<ul class="actions">
+												<li><a href="https://github.com/jonasbarletta/hackdays_hotel_cancellation" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 
