removed href from email

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 							</form>
 							<ul class="contact">
 								<li class="icon solid fa-phone">(11) 97233-3013</li>
-								<li class="icon solid fa-envelope"><a href="#">jonasbarletta@gmail.com</a></li>
+								<li class="icon solid fa-envelope"><a>jonasbarletta@gmail.com</a></li>
 								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/jonasbarletta/">linkedin.com/in/jonasbarletta/</a></li>
 								<li class="icon brands fa-github"><a href="https://github.com/jonasbarletta">github.com/jonasbarletta</a></li>
 							</ul>
