Correção e alteração de imagens

--- a/index.html
+++ b/index.html
@@ -42,8 +42,21 @@
 									<a class="image"><img src="images/Jonas_Foto_Perfil.jpeg" alt=""/></a>
 									<div class="content">
 										<h2 class="major">Sobre mim</h2>
-										<p  align="justify">Sou <b>Analista de Inteligência de Dados</b> na Vitrio,
-											  no de <b>Engenharia de Dados</b> com uma paixão por transformar
+										<p  align="justify">
+											Trabalho como <b>Analista de Inteligência de Dados</b> na Vitrio,
+											fazendo parte do time de <b>Engenharia de Dados</b>. Minha paixão
+											é transformar dados em insights práticos e valiosos. Durante
+											minha trajetória profissional, concentrei-me em criar soluções
+											sólidas de <b>ETL (Extração, Transformação e Carga) para coletar
+											e preparar dados</b>, o que impulsiona a tomada de
+											decisões estratégicas nas organizações.</p>
+
+											<p align="justify"> Estou <b>comprometido em impulsionar a inovação através da análise de dados e em
+											resolver problemas de negócios complexos</b> para alcançar resultados concretos.
+ 											Nesta página, você pode dar uma olhada em alguns dos projetos que tive a oportunidade
+  										de realizar.</p>
+											<!-- Sou <b>Analista de Inteligência de Dados</b> na Vitrio,
+											  no time de <b>Engenharia de Dados</b> com uma paixão por transformar
 											  informações em insights acionáveis. Minha trajetória profissional
 												é pautada na criação de <b>soluções robustas de ETL (Extração,
 												Transformação e Carga) para a extração e preparação de dados</b>,
@@ -51,7 +64,7 @@
 
 										<p align="justify"> Sou <b>comprometido em impulsionar a inovação por meio da análise
 												de dados, resolvendo problemas de negócios complexos com foco em resultados</b>.
-												Nesta página você pode conferir alguns dos projetos que realizei.</p>
+												Nesta página você pode conferir alguns dos projetos que realizei.</p> -->
 									</div>
 								</div>
 							</section>
@@ -63,20 +76,21 @@
 									<div class="content">
 										<h2 class="major">Habilidades</h2>
 										<ul>
-											<li align="justify">ETL com Python e SQL</li>
-											<li align="justify">Web Scraping com Python</li>
-											<li align="justify">Data Viz: Matplotlib, Seaborn, Plotly,
-												 Looker e Looker Studio</li>
-											<li align="justify">Storytelling com Dados</li>
-											<li align="justify">Machine Learning
+											<li align="justify"><b>ETL</b> com <b>Python</b> e <b>SQL</b></li>
+											<li align="justify"><b>Web Scraping</b> com Python</li>
+											<li align="justify">Data Viz: <b>Matplotlib, Seaborn, Plotly,
+												 Looker e Looker Studio</b></li>
+											<li align="justify"><b>Storytelling com Dados</b></li>
+											<li align="justify"><b>Machine Learning</b>
 												(regressão, classificação, clusterização) em Python (Scikit Learn)</li>
 											<li align="justify">Métricas de performance de Algoritmos de ML</li>
-											<li align="justify">Técnicas de balanceamento dos dados,
-												 seleção de atributos e redução de dimensionalidade.</li>
-											<li align="justify">Git e Github</li>
-											<li align="justify">Análises Descritivas, Preditivas e Prescritivas</li>
-											<li align="justify">Estatística Descritivas e Inferencial</li>
-											<li align="justify">Cloud: AWS Amazon e GCP</li>
+											<li align="justify">Técnicas de <b>balanceamento dos dados,
+												 seleção de atributos e redução de dimensionalidade.</b></li>
+											<li align="justify"><b>Git e Github</b></li>
+											<li align="justify"><b>Análises Descritivas, Preditivas e Prescritivas</b></li>
+											<li align="justify"><b>Estatística Descritivas e Inferencial</b></li>
+											<li align="justify"><b>Teste A/B</b></li>
+											<li align="justify">Clouds: <b>AWS Amazon e GCP</b></li>
 
 										 <!-- <li align="justify">Desenvolvimento de pipelines de <b>ETL com Python e
 											  SQL</b>, com webscraping para coleta de dados.</li>
@@ -149,7 +163,7 @@
 								  Utilizei a metodologia CRISP-DS em todos os projetos, que consiste em um
 							 	  método cíclico de resolução de problemas em dados desde a recepção
 							    e entendimento do projeto de negócio até o desenvolimento do modelo de Machine
-							    Learning e puplicação em produção, passando pela limpeza dos dados,
+							    Learning e publicação em produção, passando pela limpeza dos dados,
 									análise exploratória e geração de insights acionáveis. </p>
 									<section class="features">
 										<article>
@@ -170,7 +184,7 @@
 										<article>
 											<a class="image"><img src="images/insiders_clustering.jpg" alt="" /></a>
 											<h3 class="major">Identificação de Clientes de Alto Valor</h3>
-											<p align='justify'>Este é um projeto de Ciências de Dados que utliza técnicas de agrupamento
+											<p align='justify'>Este é um projeto de Ciências de Dados que utiliza técnicas de agrupamento
 												(clusterização) de clientes de um E-Commerce. O objetivo do projeto é
 												identificar um grupo de clientes que seja mais importantes para a
 												empresa para que seja fornecido um programa de fidelidade. Utilizei
@@ -210,7 +224,7 @@
 											<a href="https://github.com/jonasbarletta/ds_em_producao" class="special">Saiba mais</a>
 										</article>
 										<article>
-											<a class="image"><img src="images/houses.jpg" alt="" /></a>
+											<a class="image"><img src="images/houses3.jpg" alt="" /></a>
 											<h3 class="major">Projeto House Rocket</h3>
 											<p  align='justify'>Este é um projeto de Insights
 												que busca analisar as melhores oportunidades de compras de imóveis
