--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<div class="logo"><span class="icon solid fa-rocket"></span></div>
 							<h2>Portfólio de Dados</h2>
 							<p align="justify">Meu nome é <b>Jonas Barletta</b>, seja muito bem vindo(a) ao meu porfólio de projetos.
-								 Nessa página eu vou apresentar um pouco das minhas experiências no mundo dos
+								 Nessa página vou apresentar um pouco das minhas experiências no mundo dos
 							   Dados. Vamos lá?! </p>
 						</div>
 					</section>
@@ -53,7 +53,7 @@
 
 											<p align="justify"> Estou <b>comprometido em impulsionar a inovação através da análise de dados e em
 											resolver problemas de negócios complexos</b> para alcançar resultados concretos.
- 											Nesta página, você pode dar uma olhada em alguns dos projetos que tive a oportunidade
+ 											Neste portfólio, você irá encontrar alguns dos projetos que tive a oportunidade
   										de realizar.</p>
 											<!-- Sou <b>Analista de Inteligência de Dados</b> na Vitrio,
 											  no time de <b>Engenharia de Dados</b> com uma paixão por transformar
@@ -158,13 +158,13 @@
 							<section id="six" class="wrapper alt style2">
 								<div class="inner">
 									<h2 class="major">Projetos</h2>
-									<p>Nessa sessão é dedicada a um resumo de cada projeto que realizei.
-									Esses projetos são fictícios e foram feitos com dados público de competições do Kaggle.
+									<p align='justify'>Essa sessão é dedicada a um resumo de cada projeto que realizei.
+									Esses projetos são de empresas fictícias e foram feitos com dados público de competições do Kaggle.
 								  Utilizei a metodologia CRISP-DS em todos os projetos, que consiste em um
 							 	  método cíclico de resolução de problemas em dados desde a recepção
-							    e entendimento do projeto de negócio até o desenvolimento do modelo de Machine
-							    Learning e publicação em produção, passando pela limpeza dos dados,
-									análise exploratória e geração de insights acionáveis. </p>
+							    e entendimento do projeto de negócio, passando pela limpeza dos dados,
+									análise exploratória, geração de insights acionáveis até o desenvolvimento do
+									modelo de Machine Learning e publicação em produção, . </p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/hotel_cancelation.jpg" alt="" /></a>
